--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                servant-auth-test
+name:                servant-test
 version:             0.1.0.0
-github:              "mngrm3a/servant-auth-test"
+github:              "mngrm3a/servant-test"
 license:             BSD3
 author:              "Daniel Priebe"
 maintainer:          "tuxhq@icloud.com"
@@ -13,7 +13,7 @@ copyright:           "2019 Daniel Priebe"
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/mngrm3a/servant-auth-test#readme>
+description:         Please see the README on GitHub at <https://github.com/mngrm3a/servant-test#readme>
 
 extra-source-files:
 - README.md
@@ -22,7 +22,7 @@ dependencies:
 - base >= 4.7 && < 5
 
 executables:
-  servant-auth-test-exe:
+  servant-test-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
